added column names and debugging params on development

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="container">
     <%= yield %>
   </body>
   
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <%- if Rails.env.development? %>
+    <%= debug params %>
+  <% end %>
 </html>
