--- a/app/views/layouts/_card.html.erb
+++ b/app/views/layouts/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+<div class="card <%= local_assigns.fetch :foreground, 'text-white' %> <%= local_assigns.fetch :background, 'bg-primary' %> mb-3" style="max-width: 18rem;">
   <div class="card-header"><%= card_header %></div>
   <div class="card-body">
     <h5 class="card-title"><%= card_title %></h5>
