--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+.centered {
+    // border: 1px solid;
+    height: 150px;
+    width: 400px;
+    margin: 0;
+    // background: yellow;
+    position: absolute;
+    top: 300%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
