--- a/app/assets/stylesheets/demo.css
+++ b/app/assets/stylesheets/demo.css
@@ -14,7 +14,7 @@
 .clearfix:after { clear: both; }
 
 body {
-	background: #c1c1c1 url(unsplash.jpg) no-repeat center bottom;
+	background: #c1c1c1 url(unsplash.jpg) center bottom;
 	color: #fff;
 	font-size: 1em;
 	font-family: 'Raleway', Arial, sans-serif;
