--- a/app/views/layouts/_card.html.erb
+++ b/app/views/layouts/_card.html.erb
@@ -1,7 +1,8 @@
-<div class="card <%= local_assigns.fetch :foreground, 'text-white' %> <%= local_assigns.fetch :background, 'bg-primary' %> mb-3" style="max-width: 18rem;">
-  <div class="card-header"><%= card_header %></div>
-  <div class="card-body">
+<div class="card <%= local_assigns.fetch :foreground, 'border-primary' %> <%= local_assigns.fetch :background, 'bg-dark' %> mb-3" style="max-width: 18rem;">
+  <div class="card-header text-primary"><%= card_header %></div>
+  <div class="card-body text-info">
     <h5 class="card-title"><%= card_title %></h5>
     <p class="card-text"><%= card_text %></p>
   </div>
+  <div class="card-footer text-primary"><%= card_footer %></div>
 </div>
