--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,164 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
-    <div class="container">
-      <%= yield %>
-    </div>
-  </body>
-  
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'demo' %>
+    <%= stylesheet_link_tag 'component' %>
+    
+        <div class="row">
+        <div class="">
+          <aside class="sidebar clearfix">
+            <nav>
+              <a href="#">
+                <i class="fa fa-fw fa-comments-o"></i>
+              </a>
+              <a href="#">
+                <i class="fa fa-fw fa-heart-o"></i>
+              </a>
+              <a href="#">
+                <i class="fa fa-fw fa-send-o"></i>
+              </a>
+              <a href="#">
+                <i class="fa fa-fw fa-smile-o"></i>
+              </a>
+            </nav>
+          </aside>
+          <div id="morphsearch" class="morphsearch">
+            <form class="morphsearch-form">
+              <input class="morphsearch-input" type="search" placeholder="Search..." />
+              <button class="morphsearch-submit" type="submit">Search</button>
+            </form>
+            <div class="morphsearch-content">
+             
+              <div class="dummy-column">
+                <h2>Rxes</h2>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/08/05/page-preloading-effect/">
+    
+                  <%= image_tag 'PagePreloadingEffect.png' %>
+    
+    
+                    <h3>Page Preloading Effect</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/05/28/arrow-navigation-styles/">
+    
+                  <%= image_tag 'ArrowNavigationStyles.png' %>
+    
+                    <h3>Arrow Navigation Styles</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/06/19/ideas-for-subtle-hover-effects/">
+    
+                  <%= image_tag 'HoverEffectsIdeasNew.png' %>
+    
+    
+                    <h3>Ideas for Subtle Hover Effects</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/07/14/freebie-halcyon-days-one-page-website-template/">
+    
+                  <%= image_tag 'FreebieHalcyonDays.png' %>
+    
+                    <h3>Halcyon Days Template</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/05/22/inspiration-for-article-intro-effects/">
+    
+                  <%= image_tag 'ArticleIntroEffects.png' %>
+    
+                    <h3>Inspiration for Article Intro Effects</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/06/26/draggable-dual-view-slideshow/">
+    
+                  <%= image_tag 'DraggableDualViewSlideshow.png' %>
+    
+                    <h3>Draggable Dual-View Slideshow</h3>
+                </a>
+              </div>
+              <div class="dummy-column">
+                <h2>Drugs</h2>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/10/07/tooltip-styles-inspiration/">
+                  <%= image_tag 'TooltipStylesInspiration.png' %>
+    
+                    <h3>Tooltip Styles Inspiration</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/09/23/animated-background-headers/">
+                  <%= image_tag 'AnimatedHeaderBackgrounds.png' %>
+                    <h3>Animated Background Headers</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/09/16/off-canvas-menu-effects/">
+                  <img src="img/thumbs/OffCanvas.png" alt="OffCanvas" />
+                  <h3>Off-Canvas Menu Effects</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/09/02/tab-styles-inspiration/">
+                  <img src="img/thumbs/TabStyles.png" alt="TabStyles" />
+                  <h3>Tab Styles Inspiration</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/08/19/making-svgs-responsive-with-css/">
+                  <img src="img/thumbs/ResponsiveSVGs.png" alt="ResponsiveSVGs" />
+                  <h3>Make SVGs Responsive with CSS</h3>
+                </a>
+                <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/07/23/notification-styles-inspiration/">
+                  <img src="img/thumbs/NotificationStyles.png" alt="NotificationStyles" />
+                  <h3>Notification Styles Inspiration</h3>
+                </a>
+              </div>
 
+               <div class="dummy-column">
+                <h2>Top doctors</h2>
+                <a class="dummy-media-object" href="http://twitter.com/SaraSoueidan">
+                  <img class="round" src="http://0.gravatar.com/avatar/81b58502541f9445253f30497e53c280?s=50&d=identicon&r=G" alt="Sara Soueidan"
+                  />
+                  <h3>Sara Soueidan</h3>
+                </a>
+                <a class="dummy-media-object" href="http://twitter.com/rachsmithtweets">
+                  <img class="round" src="http://0.gravatar.com/avatar/48959f453dffdb6236f4b33eb8e9f4b7?s=50&d=identicon&r=G" alt="Rachel Smith"
+                  />
+                  <h3>Rachel Smith</h3>
+                </a>
+                <a class="dummy-media-object" href="http://www.twitter.com/peterfinlan">
+                  <img class="round" src="http://0.gravatar.com/avatar/06458359cb9e370d7c15bf6329e5facb?s=50&d=identicon&r=G" alt="Peter Finlan"
+                  />
+                  <h3>Peter Finlan</h3>
+                </a>
+                <a class="dummy-media-object" href="http://www.twitter.com/pcridesagain">
+                  <img class="round" src="http://1.gravatar.com/avatar/db7700c89ae12f7d98827642b30c879f?s=50&d=identicon&r=G" alt="Patrick Cox"
+                  />
+                  <h3>Patrick Cox</h3>
+                </a>
+                <a class="dummy-media-object" href="https://twitter.com/twholman">
+                  <img class="round" src="http://0.gravatar.com/avatar/cb947f0ebdde8d0f973741b366a51ed6?s=50&d=identicon&r=G" alt="Tim Holman"
+                  />
+                  <h3>Tim Holman</h3>
+                </a>
+                <a class="dummy-media-object" href="https://twitter.com/shaund0na">
+                  <img class="round" src="http://1.gravatar.com/avatar/9bc7250110c667cd35c0826059b81b75?s=50&d=identicon&r=G" alt="Shaun Dona"
+                  />
+                  <h3>Shaun Dona</h3>
+                </a>
+              </div>
+            </div>
+            <!-- /morphsearch-content -->
+            <span class="morphsearch-close"></span>
+          </div>
+          <!-- /morphsearch -->
+          <header class="codrops-header">
+            <h1>
+              <%= link_to root_path do %>
+                Roshe<strong>tt</strong>a
+              <% end %>
+              <span>Welcome to the era of digital prescriptions.</span>
+            </h1>
+          </header>
+          <div class="overlay"></div>
+        </div>
+        </div>
+       <div class="row">
+        <main class="main container">
+              <%= yield %>
+          </main>
+       </div>
+  </body>
    <%- if false %>
     <%= render 'layouts/card.html.erb', card_title: 'Params', card_header: 'DEBUG', card_text: debug(params), background: 'bg-warning' %>
   <% end %> 
