--- a/app/views/rxes/index.html.erb
+++ b/app/views/rxes/index.html.erb
@@ -5,8 +5,13 @@
   
   <h1>Rxes</h1>
   
-  <%= render 'layouts/card.html.erb', card_title: 'Rx', card_header: 'Column Names', card_text: rx_column_names %>
+  <h2><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></h2>
+
+  <%= render 'layouts/card.html.erb', card_title: 'Rx', card_header: 'Column Names', card_text: model_column_names(Rx) %>
   
     <%= link_to 'New Rx', new_rx_path %>
+
+<%= pie_chart [['Eva Pharma', 10], ['Amrya', 5], ['Farco', 15]], download: true %>
+
 
 </div>
