--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,3 @@
 <h3><strong><big>T</big></strong>he best solution for digital prescriptions.</h3>
 
-<%= pie_chart [['Eva Pharma', 10], ['Amrya', 5], ['Farco', 15]], download: true %>
+<%= drugs_by_price_line %>
