--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,11 @@
 @import "font-awesome";
 @import 'login_form';
 @import 'footer';
+@import 'demo';
+@import 'component';
+* {
+    box-sizing: border-box;
+}
 
 .centered {
     // border: 1px solid;
@@ -13,4 +18,17 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
+}
+
+.hint {
+    font-family: 'Verdana';
+    font-weight: 300;
+    width: 100%;
+    height: 100%;
+    padding: 0 10% 0 10px;
+    border: none;
+    background: transparent;
+    font-size: 1.7em;
+    color: #f08a8f;
+    transition: font-size 0.5s cubic-bezier(0.7, 0, 0.3, 1);
 }
