--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,4 +1,4 @@
 <p class="mt-5 mb-3 text-muted">
-<a href="http://faceboook.com/a7madx7" target="_blank">Hamdiz</a>
+<a href="http://www.linkedin.com/in/a7madx7" target="_blank">Hamdiz</a>
  &copy; 
  <%= 1.year.ago.year%>-<%= Time.now.year%></p>
