styled pharmacist and physician control panels

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,10 @@
 @import "bootstrap";
-@import "font-awesome";
 @import 'login_form';
 @import 'footer';
 @import 'demo';
 @import 'component';
+@import 'welcome';
+
 * {
     box-sizing: border-box;
 }
