--- a/app/views/welcome/_pharmacist_control_panel.html.erb
+++ b/app/views/welcome/_pharmacist_control_panel.html.erb
@@ -1,7 +1,7 @@
 <h2 class="text-center control-panel-header">Pharmacist control panel</h2>
 <div class="card-group">
   <div class="card">
-    <div class="card-header">Issue a Rx</div>
+    <div class="card-header">Dispense a Rx</div>
     <div class="card-body">
       <%= link_to new_rx_path  do %>
         <i class="fas fa-plus"></i>
