--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -1,21 +1,22 @@
 <h1>Companies</h1>
 <br>
-<%= companies_by_market_share_bar %>
-
+<%#= companies_by_drug_count_bar %>
+<%= popular_companies_by_drug_visits_bar_chart %>
 <%= companies_by_market_value_column %>
 <br>
-<div class="card-columns">
-<%- @companies.each do |company| %>
-  <div class="card border-primary bg-dark">
-    <div class="card-header text-primary"><%= company.name %></div>
-    <div class="card-body text-info">
-      <%= "#{company.name.downcase.capitalize} has #{company.drugs.count} drugs in the market." %>
-    </div>
-    <div class="card-footer text-primary">Created <%= time_ago_in_words(company.created_at) %> ago</div>
+<article class="listing">
+  <div class="card-columns">
+    <%- @companies.each do |company| %>
+      <div class="card border-primary bg-light">
+        <div class="card-header text-primary"><%= company.name %></div>
+        <div class="card-body text-info">
+          <%= "#{truncate(company.name.downcase.capitalize, length: 12)} has #{company.drugs.count} drugs in the market." %>
+        </div>
+        <div class="card-footer text-primary">Created <%= time_ago_in_words(company.created_at) %> ago</div>
+      </div>
+      <br>
+    <% end %>
   </div>
-  <br>
-<% end %>
-</div>
-<div class="centered">
-  <%= will_paginate @companies %>
-</div>
+  <br/>
+<%= render 'layouts/pagination', pagination: @companies %>
+</article>
