--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,76 +1,23 @@
-footer.footer {
-    position: absolute;
-    top: 300%;
-    left: 50%;
-    height: 150px;
-    width: 400px;
-    margin: 0;
-    text-align: center;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+.page-footer {
+  padding-top: 20px;
+  margin-top: 10px;
+  color: #fff;
+  background-color: #ee6e73;
+  ul{
+    list-style: none;
+  }
+}
+.page-footer .footer-copyright {
+  overflow: hidden;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0px;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(51, 51, 51, 0.08);
+}
+article, aside, footer, header, nav, section {
+  display: block;
 }
 
-footer.footer .container {
-    ul {
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: flex;
-        li {
-            list-style: none;
-            a {
-                position: relative;
-                display: block;
-                width: 80px;
-                height: 80px;
-                font-size: 20px;
-                text-align: center;
-                line-height: 80px;
-                color: #262626;
-                overflow: hidden;
-                margin: 15px;
-                transform: rotate(45deg);
-                transition: .2s;
-                border: 1px solid rgba(0, 0, 0, 1);
-                .fa {
-                    transform: rotate(-45deg);
-                    font-size: 2rem;
-                }
-            }
-            a:before {
-                content: '';
-                position: absolute;
-                bottom: -100%;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: #262626;
-                transition: .2s;
-            }
-            a:hover:before {
-                bottom: 0;
-            }
-            a:hover {
-                color: #fff;
-            }
-        }
-        li:nth-child(1) a:before {
-            background: #3b5998;
-        }
-        li:nth-child(2) a:before {
-            background: #00aced;
-        }
-        li:nth-child(3) a:before {
-            background: #dd4b39;
-        }
-        li:nth-child(4) a:before {
-            background: #007bb6;
-        }
-        li:nth-child(5) a:before {
-            background: #bc2a8d;
-        }
-    }
-}
