--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,4 +1,3 @@
-<p class="mt-5 mb-3 text-muted">
-<a href="http://www.linkedin.com/in/a7madx7" target="_blank">Hamdiz</a>
+<a href="http://www.linkedin.com/in/roshetta" target="_blank">Roshetta</a>
  &copy; 
- <%= 1.year.ago.year%>-<%= Time.now.year%></p>
+<%= 1.year.ago.year%>-<%= Time.now.year%>
