--- a/app/views/rxes/new.html.erb
+++ b/app/views/rxes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Rx</h1>
+<h1>Issue a Rx</h1>
 
 <%= render 'form', rx: @rx %>
 
-<%= link_to 'Back', rxes_path %>
+<%= link_to 'Back', rxes_path, class: 'btn btn-warning' %>
